syntax = "proto3";

package types;

option go_package = "github.com/tinyci/ci-agents/ci-gen/grpc/types";

// IntID is a basic integer ID -- it's used to control a variety of things that
// use basic sequences and so forth.
message IntID {
  int64 ID = 1; // ID is the ID.
}

// StringID is just like types.IntID but instead it's a string!
message StringID {
  string ID = 1; // ID is the ID.
}
